tests/data/specs/invalid/TLS.rflx
package TLS is

end TLS;
